[project]
name = "adspy"
version = "0.4.0"
description = "Algorithms and Data Structures in Python"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "algorithms", "data structures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "typing-extensions>=4.12.2",
]

[dependency-groups]
lint = [
    "mypy>=1.16.1",
    "ruff>=0.12.2",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-random-order>=1.2.0",
    "pytest-xdist>=3.8.0",
]

[tool.mypy]
files = [
    "./adspy/**/*.py",
    "./tests/**/*.py",
]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
pretty = true
show_column_numbers = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.4"
addopts = [
    "-s",
    "-vvv",
    "--maxfail=1",
    "--random-order"
]
xfail_strict = true
testpaths = [
    "tests",
]

[tool.ruff]
indent-width = 4
line-length = 80
show-fixes = true
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "auto"  # automatically detect the appropriate line ending.
quote-style = "double"
skip-magic-trailing-comma = false  # respect magic trailing commas.

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "D",  # pydocstyle  # for now
    "E",  # pycodestyle (Error)
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PIE",  # flake8-pie
    "PT",  # pytest-style
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "T",  # flake8-print-linter
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TC",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # pycodestyle (Warning)
]
ignore = [
    "ANN401",  # https://docs.astral.sh/ruff/rules/any-type/
    "ISC001",  # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
]
fixable = [
    "I",
    "ISC",
    "TC006"
]

[tool.ruff.lint.extend-per-file-ignores]
"adspy/*.py" = [
    "D105",  # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "N812",  # https://docs.astral.sh/ruff/rules/lowercase-imported-as-non-lowercase/
]
"tests/*.py" = [
    "ANN201",  # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function/
    "D",
    "FBT001"  # https://docs.astral.sh/ruff/rules/boolean-type-hint-positional-argument/
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
